# server/src/domain/album/album-response.dto.ts
@@ -2,6 +2,10 @@ import { AlbumEntity } from '@app/infra/entities';
 import { ApiProperty } from '@nestjs/swagger';
 import { AssetResponseDto, mapAsset } from '../asset';
 import { UserResponseDto, mapUser } from '../user';
+import { AlbumAssetCount } from '../repositories';
+import { ValidateUUID } from '../domain.util';
+
+
 
 export class AlbumResponseDto {
   id!: string;
@@ -21,6 +25,20 @@ export class AlbumResponseDto {
   lastModifiedAssetTimestamp?: Date;
   startDate?: Date;
   endDate?: Date;
+}
+
+export class AlbumsForPersonResponseDto {
+  @ValidateUUID()
+  albumId!: string;
+  @ApiProperty({ type: 'integer' })
+  assetCount!: number;
+}
+
+export function mapAlbumCount(entity: AlbumAssetCount): AlbumsForPersonResponseDto {
+  return {
+    albumId: entity.albumId,
+    assetCount: entity.assetCount,
+  };
 }
 
 export const mapAlbum = (entity: AlbumEntity, withAssets: boolean): AlbumResponseDto => {
